--- a/topicos-avancados-de-programacao/2022-04-13/index.html
+++ b/topicos-avancados-de-programacao/2022-04-13/index.html
@@ -5,208 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Calculadora de Área</title>
-    <script>
-
-        function formatoTri() {
-            var base = parseFloat(document.getElementById("base").value);
-            var alt = parseFloat(document.getElementById("alt").value);
-
-            if (base >= alt) {
-                document.getElementById("triangulo").style.borderWidth = "0 100px " + alt / base * 200 + "px 100px";
-            } else {
-                document.getElementById("triangulo").style.borderWidth = "0 " + base / alt * 100 + "px 200px " + base / alt * 100 + "px";
-            }
-        }
-
-        function formatoQua() {
-            if (parseFloat(document.getElementById("lado").value) == 0)
-                document.getElementById("quadrado").style.borderWidth = "0";
-            else
-                document.getElementById("quadrado").style.borderWidth = "100px";
-        }
-
-        function formatoCir() {
-            if (parseFloat(document.getElementById("raio").value) == 0)
-                document.getElementById("circulo").style.borderWidth = "0";
-            else
-                document.getElementById("circulo").style.borderWidth = "100px";
-        }
-
-        function formatoTra() {
-            var b_maior = parseFloat(document.getElementById("b_maior").value);
-            var b_menor = parseFloat(document.getElementById("b_menor").value);
-            var alt = parseFloat(document.getElementById("alt_tra").value)
-
-            if (b_maior < b_menor) {
-                var aux = b_maior;
-                b_maior = b_menor;
-                b_menor = aux;
-            }
-
-            if (alt >= b_maior) {
-                document.getElementById("tra_qua").style.borderWidth = "100px " + b_menor / alt * 100 + "px 100px " + b_menor / alt * 100 + "px";
-                document.getElementById("tra_tri").style.borderWidth = "100px " + (b_maior - b_menor) / alt * 100 + "px"/* 100px " + (b_maior - b_menor) / alt * 100 + "px"*/;
-            } else {
-                document.getElementById("tra_qua").style.borderWidth = alt / b_maior * 100 + "px " + b_menor / b_maior * 100 + "px";
-                document.getElementById("tra_tri").style.borderWidth = alt / b_maior * 100 + "px " + (b_maior - b_menor) / b_maior * 100 + "px";
-            }
-        }
-
-        function formatoRet() {
-            var base = parseFloat(document.getElementById("base_ret").value);
-            var alt = parseFloat(document.getElementById("alt_ret").value);
-
-            if (base >= alt) {
-                document.getElementById("retangulo").style.borderWidth = "100px " + alt / base * 100 + "px";
-            } else {
-                document.getElementById("retangulo").style.borderWidth = base / alt * 100 + "px 100px";
-            }
-        }
-
-        function triangulo() {
-            var base = parseFloat(document.getElementById("base").value);
-            var alt = parseFloat(document.getElementById("alt").value);
-
-            if (base >= 0 && alt >= 0)
-                document.getElementById("res_tri").value = (base * alt) / 2;
-        }
-        function quadrado() {
-            var lado = parseFloat(document.getElementById("lado").value);
-
-            if (lado >= 0)
-                document.getElementById("res_qua").value = lado * lado;
-        }
-
-        function circulo() {
-            var raio = parseFloat(document.getElementById("raio").value);
-
-            if (raio >= 0)
-                document.getElementById("res_cir").value = raio * raio + "π";
-        }
-
-        function trapezio() {
-            var b_maior = parseFloat(document.getElementById("b_maior").value);
-            var b_menor = parseFloat(document.getElementById("b_menor").value);
-            var alt = parseFloat(document.getElementById("alt_tra").value)
-
-            if (b_maior >= 0 && b_menor >= 0 && alt >= 0)
-                document.getElementById("res_tra").value = (b_maior + b_menor) * alt / 2;
-        }
-
-        function retangulo() {
-            var base = parseFloat(document.getElementById("base_ret").value);
-            var alt = parseFloat(document.getElementById("alt_ret").value);
-
-            if (base >= 0 && alt >= 0)
-                document.getElementById("res_ret").value = base * alt;
-        }
-    </script>
-    <style>
-        table {
-            margin: auto;
-        }
-
-        #quadrado,
-        #triangulo,
-        #circulo,
-        #retangulo {
-            width: 0;
-            height: 0;
-        }
-
-        #triangulo {
-            margin: auto;
-            border-width: 0 100px 200px 100px;
-            border-style: solid;
-            border-color: transparent;
-            border-bottom-color: yellow;
-            transition: border 0.5s;
-        }
-
-        #quadrado {
-            margin: auto;
-            border: 100px solid red;
-            transition: border 0.5s;
-        }
-
-        #circulo {
-            margin: auto;
-            border: 100px solid blue;
-            border-radius: 200px;
-            transition: border 0.5s;
-        }
-
-        #trapezio {
-            margin: auto;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            width: fit-content;
-        }
-
-        #tra_qua {
-            border-width: 100px 50px 100px 50px;
-            border-style: solid;
-            border-color: green;
-            transition: border 0.5s;
-        }
-
-        #tra_tri {
-            border-width: 100px 50px 100px 50px;
-            border-style: solid;
-            border-color: transparent transparent green green;
-            transition: border 0.5s;
-        }
-
-        #retangulo {
-            margin: auto;
-            border: 100px solid orange;
-            border-width: 50px 100px;
-            transition: border 0.5s;
-        }
-
-        #espaco {
-            height: 24px;
-        }
-
-        #base,
-        #alt,
-        #res_tri {
-            width: 142px;
-        }
-
-        #lado,
-        #res_qua {
-            width: 147px;
-        }
-
-        #raio,
-        #res_cir {
-            width: 147px;
-        }
-
-        #b_menor,
-        #b_maior,
-        #alt_tra,
-        #res_tra {
-            width: 129px;
-        }
-
-        #base_ret,
-        #alt_ret,
-        #res_ret {
-            width: 142px;
-        }
-
-        th {
-            min-width: 200px;
-        }
-
-        #tabela {
-            overflow-x: scroll;
-        }
-    </style>
 </head>
 
 <body>
@@ -220,7 +21,7 @@
                     <th>Trapézio</th>
                     <th>Retângulo</th>
                 </tr>
-                <tr>
+                <tr id="formas">
                     <td>
                         <div id="triangulo"></div>
                     </td>
